<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen.Register.CreateActivity"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <ImageButton
        android:id="@+id/btn_back_main"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_back"
        android:scaleType="fitStart"
        android:background="@color/colorwhite"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="10dp"
        android:text="@string/Create_new_account"
        android:textSize="@dimen/size_text_view"
        android:gravity="fill_vertical"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#11000000"
        android:paddingLeft="@dimen/margin_top"
        android:hint="@string/text_username"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#11000000"
        android:hint="@string/Email"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/et_pass"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#11000000"
        android:paddingLeft="10dp"
        android:hint="@string/Password"
        />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#11000000"
        android:paddingLeft="10dp"
        android:hint="@string/text_first_name"
        />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#11000000"
        android:paddingLeft="10dp"
        android:hint="@string/text_last_name"
        />

    <TextView
        android:id="@+id/text_error_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorOrange"
        android:textSize="20sp"
        />

    <ProgressBar
        android:id="@+id/mProgressBarCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:text="@string/text_Sign_up"
        android:gravity="center"
        android:textColor="@color/colorwhite">
    </Button>

</LinearLayout>