<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="140dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginLeft="10dp"
    android:id="@+id/layout_deal"
    >

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="140dp">

            <ImageView
                android:id="@+id/image_deal_flight"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/text_deal_flight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_deal_flight"
                android:text="@string/text_place_deal"
                android:textSize="22sp"
                android:textColor="@color/colorBlack"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/text_money_flight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_money_deal"
                android:textSize="22sp"
                android:layout_toRightOf="@id/text_deal_flight"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/tet_info_deal_flight"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_deal_flight"
                android:layout_toRightOf="@id/image_deal_flight"
                android:text="@string/text_info_deal"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/text_empty_flight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_deal_flight"
                android:layout_below="@+id/tet_info_deal_flight"
                android:text="@string/text_empty_deal"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorOrange"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</android.support.v7.widget.CardView>